--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,36 @@
 </head>
 
 <body>
-  <h1 class="text-amber-500">OiOiOi</h1>
+
+  <div>
+
+    <header>
+      <a href="#"> <img src="/src/img/wildbeast.svg" alt="Wildbeast"> </a>
+      <nav>
+        <ul>
+          <li> <a href="#">sobre</a> </li>
+          <li> <a href="#">animais</a> </li>
+          <li> <a href="#">contato</a> </li>
+        </ul>
+      </nav>
+    </header>
+
+    <nav>
+      <ul>
+        <li> <a href="#"> <img src="/src/img/icones/cervo.svg" alt="Cervo"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/leao.svg" alt="Leão"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/gato.svg" alt="Gato"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/vaca.svg" alt="Vaca"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/ovelha.svg" alt="Ovelha"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/abelha.svg" alt="Abelha"> </a> </li>
+      </ul>
+    </nav>
+
+    <main>
+    </main>
+
+  </div>
+
 </body>
 
 </html>
