Header. Ter que ver a documentação toda hora, mas o seletor atual e a EM [&_a]: me quebrou

--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,11 @@
 
   <div class="grid grid-cols-[minmax(160px,1fr)_3fr_300px]">
 
-    <header class="col-span-full">
-      <a href="#"> <img src="/src/img/wildbeast.svg" alt="Wildbeast"> </a>
+    <header class="col-span-full bg-[linear-gradient(135deg,#8844ee,#b07dfb)] p-7.5 grid grid-cols-[1fr_auto] items-center">
+      <a href="#" class="max-w-50"> <img src="/src/img/wildbeast.svg" alt="Wildbeast"> </a>
       <nav>
-        <ul>
-          <li> <a href="#">sobre</a> </li>
+        <ul class="flex flex-wrap gap-7.5 [&_a]:block [&_a]:p-2.5 [&_a]:text-white [&_a]:text-[1.125em] [&_a]:bg-[rgba(0,0,0,.1)] [&_a]:rounded-[5px] [&_a]:hover:bg-[rgba(0,0,0,.5)] [&_a]:transition-colors [&_a]:duration-100"">
+          <li> <a href=" #">sobre</a> </li>
           <li> <a href="#">animais</a> </li>
           <li> <a href="#">contato</a> </li>
         </ul>
@@ -29,12 +29,12 @@
 
     <nav class="col-start-1">
       <ul>
-        <li> <a href="#"> <img src="/src/img/icones/cervo.svg" alt="Cervo"> </a> </li>
-        <li> <a href="#"> <img src="/src/img/icones/leao.svg" alt="Leão"> </a> </li>
-        <li> <a href="#"> <img src="/src/img/icones/gato.svg" alt="Gato"> </a> </li>
-        <li> <a href="#"> <img src="/src/img/icones/vaca.svg" alt="Vaca"> </a> </li>
-        <li> <a href="#"> <img src="/src/img/icones/ovelha.svg" alt="Ovelha"> </a> </li>
-        <li> <a href="#"> <img src="/src/img/icones/abelha.svg" alt="Abelha"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/cervo.svg" class="max-w-full" alt="Cervo"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/leao.svg" class="max-w-full" alt="Leão"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/gato.svg" class="max-w-full" alt="Gato"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/vaca.svg" class="max-w-full" alt="Vaca"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/ovelha.svg" class="max-w-full" alt="Ovelha"> </a> </li>
+        <li> <a href="#"> <img src="/src/img/icones/abelha.svg" class="max-w-full" alt="Abelha"> </a> </li>
       </ul>
     </nav>
 
