SIDENAV. Eae filhão só nas documentação

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
       </nav>
     </header>
 
-    <nav class="col-start-1">
-      <ul>
+    <nav class="col-start-1 bg-[#fafbfc] p-7.5">
+      <ul class="[&_a]:max-w-45 [&_a]:block [&_a]:min-w-15 [&_a]:m-[0_auto_30px_auto] [&_a]:bg-white [&_a]:p-5 [&_a]:rounded-[5px] [&_a]:shadow-[5px_5px_15px_0px_rgba(44,44,44,0.15)] [&_a]:hover:bg-[#b07dfb] [&_a]:transition-colors [&_a]:duration-500">
         <li> <a href="#"> <img src="/src/img/icones/cervo.svg" class="max-w-full" alt="Cervo"> </a> </li>
         <li> <a href="#"> <img src="/src/img/icones/leao.svg" class="max-w-full" alt="Leão"> </a> </li>
         <li> <a href="#"> <img src="/src/img/icones/gato.svg" class="max-w-full" alt="Gato"> </a> </li>
