--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
 
     </main>
 
-    <aside class="col-start-3">
+    <aside class="col-start-3 bg-[#fafbfc] grid content-start [&_img]:rounded-[5px] p-7.5 gap-7.5">
       <div>
         <img src="/src/img/anuncio-1.jpg" alt="Anuncio 1">
       </div>
@@ -98,8 +98,8 @@
       </div>
     </aside>
 
-    <footer class="col-span-full">
-      <p>Origamid @ 2012 - 2017. Alguns direitos reservados.</p>
+    <footer class="col-span-full bg-[linear-gradient(135deg,#8844ee,#b07dfb)] ">
+      <p class="text-white text-center p-7.5">Origamid @ 2012 - 2017. Alguns direitos reservados.</p>
     </footer>
 
   </div>
