--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
       </ul>
     </nav>
 
-    <main class="col-start-2">
+    <main class="col-start-2 max-w-4xl m-auto p-7.5 grid grid-cols-2 gap-7.5">
       <div>
         <h1>Lobo Cinza </h1>
         <span>da família canis lupus</span>
@@ -54,20 +54,20 @@
         </div>
       </div>
 
-      <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
+      <p class="col-span-full">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
 
-      <img src="/src/img/wolf1.jpg" alt="Wolf 1">
+      <img src="/src/img/wolf1.jpg" class="row-span-2 self-end" alt="Wolf 1">
 
       <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
 
-      <img src="/src/img/wolf2.jpg" alt="Wolf 2">
+      <img src="/src/img/wolf2.jpg" class="self-end" alt="Wolf 2">
 
       <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude, como previsto pela teoria de Christian Bergmann. Em geral, a altura, medida a partir dos ombros, varia de 60 a 95 centímetros.</p>
 
       <p>O peso varia geograficamente. Em média, os lobos europeus pesam 38,5 kg; os lobos da América do Norte, 36kg; os lobos indianos e árabes, 25kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8] e na antiga União Soviética.
       </p>
 
-      <blockquote>
+      <blockquote class="col-span-full">
         <p>"Há algo no vivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente."</p>
       </blockquote>
 
@@ -85,7 +85,7 @@
         <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
       </div>
 
-      <img src="/src/img/wolf3.jpg" alt="Wolf 3">
+      <img src="/src/img/wolf3.jpg" class="col-span-full max-w-full" alt="Wolf 3">
 
     </main>
 
