--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/src/output.css">
 </head>
 
-<body>
+<body class="font-[Volkhov]">
 
   <div class="grid grid-cols-[minmax(160px,1fr)_3fr_300px]">
 
@@ -38,19 +38,19 @@
       </ul>
     </nav>
 
-    <main class="col-start-2 max-w-4xl m-auto p-7.5 grid grid-cols-2 gap-7.5">
+    <main class="col-start-2 max-w-4xl m-auto p-7.5 grid grid-cols-2 gap-7.5 [&_p]:text-[1.2em]  [&_p]:leading-[1.6] [&_p]:tracking-[-0.005em] [&_p]:text-[rgba(0,0,0,.7)] ">
       <div>
-        <h1>Lobo Cinza </h1>
-        <span>da família canis lupus</span>
+        <h1 class="text-[#b07dfb] text-[3.75em] leading-none font-bold max-w-4">Lobo Cinza </h1>
+        <span class="text-[#b07dfb] text-[0.875em] italic">da família canis lupus</span>
       </div>
-      <div>
-        <div>
-          <span>72</span>
-          <span>kg</span>
+      <div class="flex [&_div]:w-20 [&_div]:bg-[linear-gradient(135deg,#8844ee,#b07dfb)] [&_div]:text-center [&_div]:rounded-[5px] [&_div]:shadow-[5px_5px_15px_0px_rgba(44,44,44,0.15)] items-start">
+        <div class="mr-7.5">
+          <span class="text-[#b07dfb] text-[3em] leading-none m-[10px_auto] block">72</span>
+          <span class="block bg-white rounded-[0_0_5px_5px] text-[#b07dfb] pt-1.25 pb-1.25 pr-0 pl-0 ">kg</span>
         </div>
         <div>
-          <span>13</span>
-          <span>age</span>
+          <span class="text-[#b07dfb] text-[3em] leading-none m-[10px_auto] block">13</span>
+          <span class="block bg-white rounded-[0_0_5px_5px] text-[#b07dfb] pt-1.25 pb-1.25 pr-0 pl-0 ">age</span>
         </div>
       </div>
 
@@ -82,7 +82,7 @@
 
       <div>
         <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
-        <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
+        <p class="mt-7.5">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
       </div>
 
       <img src="/src/img/wolf3.jpg" class="col-span-full max-w-full" alt="Wolf 3">
