--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
 
       <p class="col-span-full">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
 
-      <img src="/src/img/wolf1.jpg" class="row-span-2 self-end" alt="Wolf 1">
+      <img src="/src/img/wolf1.jpg" class="row-span-2 w-full self-end" alt="Wolf 1">
 
-      <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
+      <p class="text-[0.875em]! text-[#b07dfb]! max-w-[16em]">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
 
       <img src="/src/img/wolf2.jpg" class="self-end" alt="Wolf 2">
 
@@ -67,16 +67,16 @@
       <p>O peso varia geograficamente. Em média, os lobos europeus pesam 38,5 kg; os lobos da América do Norte, 36kg; os lobos indianos e árabes, 25kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8] e na antiga União Soviética.
       </p>
 
-      <blockquote class="col-span-full">
-        <p>"Há algo no vivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente."</p>
+      <blockquote class="col-span-full p-7.5 rounded-[5px] shadow-[5px_5px_15px_0px_rgba(44,44,44,0.15)] bg-[linear-gradient(135deg,#8844ee,#b07dfb)] self-start">
+        <p class="text-[1.5em]! italic text-center text-white! max-w-125 m-auto">"Há algo no vivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente."</p>
       </blockquote>
 
-      <ul>
-        <li>Surgiu: 12.000 anos</li>
-        <li>Tipo: Mamífero</li>
-        <li>Idade Média: 13 anos</li>
-        <li>Macho adulto: 80kg</li>
-        <li>Fêmea adulta: 55kg</li>
+      <ul class="p-7.5 rounded-[5px] shadow-[5px_5px_15px_0px_rgba(44,44,44,0.15)] bg-[linear-gradient(135deg,#8844ee,#b07dfb)] [&_li]:text-white [&_li]:font-[Courier] [&_li]:text-[1.125em] [&_li]:p-3.75 self-start">
+        <li class="border-b-2 border-[#b07dfb]">Surgiu: 12.000 anos</li>
+        <li class="border-b-2 border-[#b07dfb]">Tipo: Mamífero</li>
+        <li class="border-b-2 border-[#b07dfb]">Idade Média: 13 anos</li>
+        <li class="border-b-2 border-[#b07dfb]">Macho adulto: 80kg</li>
+        <li class="border-b-2 border-[#b07dfb]">Fêmea adulta: 55kg</li>
         <li>Família: Lupus</li>
       </ul>
 
@@ -85,7 +85,7 @@
         <p class="mt-7.5">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico</p>
       </div>
 
-      <img src="/src/img/wolf3.jpg" class="col-span-full max-w-full" alt="Wolf 3">
+      <img src="/src/img/wolf3.jpg" class="col-span-full w-full" alt="Wolf 3">
 
     </main>
 
